# capturing-visual-synthesis-v1

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.gpu  QUICKSTART.md  README_大模型支持下的动作捕捉与视觉合成数据系统.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  install_env.sh  mypy.ini  preview.html  pyproject.toml  pytest.ini  requirements.txt  setup.py  大模型支持下的动作捕捉与视觉合成系统V1.0-阿里云部署文档.md  大模型支持下的动作捕捉与视觉合成系统建设方案.docx  大模型支持下的动作捕捉与视觉合成系统建设方案_完整版.md
.github/workflows/: ci.yml
apps/api/: __init__.py  server.py
apps/demo/: mv1p.py
doc/: mv1p_v01.md
doc/assets/: README_LOGO.md
easymocap/: logging_config.py
easymocap/dataset/: base.py  config.py  mv1pmf.py
easymocap/llm/: __init__.py  service.py
easymocap/mytools/: vis_base.py  writer.py
easymocap/performance/: __init__.py  optimizer.py
easymocap/pipeline/: basic.py  basic.py.bak  weight.py
easymocap/plugins/: __init__.py  manager.py
easymocap/pyfitting/: lossfactory.py  optimize_simple.py
easymocap/security/: __init__.py  secrets.py
easymocap/vlm/: __init__.py  service.py
scripts/: deploy.sh  start.sh  test.sh  validate.sh
tests/: conftest.py  test_llm_service.py  test_performance.py  test_pipeline.py  test_vlm_service.py
upgrade/: Dockerfile  UPGRADE_README.md  requirements_v1.txt
upgrade/issues/: 001_版本号更新.md  002_依赖版本升级.md  003_添加类型注解.md  004_完善错误处理.md  005_实现LLM服务模块.md  006_实现VLM服务模块.md  007_Docker容器化.md  008_单元测试覆盖.md  009_API文档生成.md  010_性能优化.md  README.md
