# Python项目配置文件
# 综合配置：构建、工具、测试、类型检查

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easymocap"
version = "1.0.0"
description = "大模型支持下的动作捕捉与视觉合成系统"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "致业电子", email = "tech@zhiye.com"}
]
keywords = ["mocap", "motion-capture", "computer-vision", "deep-learning", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Homepage = "https://github.com/NickWang2023/capturing-visual-synthesis-v1"
Documentation = "https://github.com/NickWang2023/capturing-visual-synthesis-v1#readme"
Repository = "https://github.com/NickWang2023/capturing-visual-synthesis-v1"
Issues = "https://github.com/NickWang2023/capturing-visual-synthesis-v1/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.2.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]
llm = [
    "openai>=1.3.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "tiktoken>=0.5.0",
]
vlm = [
    "segment-anything>=1.0",
    "groundingdino-py>=0.1.0",
    "transformers>=4.35.0",
]
aigc = [
    "diffusers>=0.24.0",
    "controlnet-aux>=0.0.7",
    "xformers>=0.0.23",
]

[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["easymocap"]
known_third_party = ["torch", "numpy", "cv2", "fastapi"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "performance: 性能测试",
    "slow: 慢速测试",
]
addopts = "-v --tb=short --strict-markers --disable-warnings"

[tool.coverage.run]
source = ["easymocap"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
    "except Exception",
]
show_missing = true
precision = 2
fail_under = 80
